2006-07-09  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/helper.el (Helper-help-scroller): Don't signal error
	on non-char events.

2006-07-09  Romain Francoise  <romain@orebokech.com>

	* progmodes/compile.el (compilation-mode-font-lock-keywords):
	Don't highlight start/end markers as compilation messages.

	* isearch.el (isearch-yank-line): Let-bind `inhibit-field-text-motion'
	to t.

2006-07-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/fill.el (fill-region-as-paragraph): Refine last change.

2006-07-08  Richard Stallman  <rms@gnu.org>

	* term/x-win.el (x-handle-display): Add doc string.

	* emacs-lisp/easy-mmode.el (define-minor-mode): Doc fix.

	* subr.el (def-edebug-spec): Move here.
	* emacs-lisp/edebug.el (def-edebug-spec): Move to subr.el.

	* imenu.el (imenu-choose-buffer-index): Doc fix.

2006-07-08  Romain Francoise  <romain@orebokech.com>

	* term/x-win.el (x-display-name): Fix typo.

2006-07-08  Eli Zaretskii  <eliz@gnu.org>

	* hexl.el (hexl-find-file): Doc fix.

	* emacs-lisp/easy-mmode.el (define-minor-mode): Doc fix.

2006-07-07  Chong Yidong  <cyd@stupidchicken.com>

	* term/x-win.el (x-display-name): Doc fix.

2006-07-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/fill.el (fill-delete-prefix): Don't ignore excessively
	long prefixes.
	(fill-region-as-paragraph): Don't round up to a whole line.
	(fill-comment-paragraph): Don't include the code-before-the-comment
	when calling fill-region-as-paragraph.

	* international/mule.el (make-char): Remove redundancy.

	* emacs-lisp/bytecomp.el (byte-compile-form): The `byte-compile'
	property may contain an anonymous function rather than a symbol.

	* pcvs-defs.el (cvs-temp-buffer-name): Fix non-hiddenness.

	* progmodes/compile.el (compilation-error-regexp-alist-alist) <gnu>:
	Use shy regexp.  Fix incorrect backref to potentially unmatched group.

	* dirtrack.el (dirtrack-default-directory-function): Remove.
	(dirtrack-directory-function): Use file-name-as-directory.